objects/Legal_Agreement__c.object
<CustomObject><fields>
        <fullName>Legal_Agreement_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Agreement Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>agreedDateTime__c</fullName>
        <description>Date/Time when agreed set to TRUE on an agreement record.</description>
        <inlineHelpText>Date/Time when agreed set to TRUE on an agreement record.</inlineHelpText>
        <label>agreedDateTime</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>agreed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures if agreement was agreed to by Contact</description>
        <inlineHelpText>Captures if agreement was agreed to by Contact</inlineHelpText>
        <label>agreed</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>appId__c</fullName>
        <description>appId that agreement is related to, if applicable</description>
        <inlineHelpText>appId that agreement is related to, if applicable</inlineHelpText>
        <label>appId</label>
        <length>35</length>
        <type>Text</type>
    </fields><fields>
        <fullName>key__c</fullName>
        <description>The name of the document agreed to by the Contact.</description>
        <inlineHelpText>The name of the document agreed to by the Contact.</inlineHelpText>
        <label>key</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>version__c</fullName>
        <description>Version of the document agreed to by the Contact</description>
        <inlineHelpText>Version of the document agreed to by the Contact</inlineHelpText>
        <label>version</label>
        <length>200</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Captures agreements signed by users on Helix Marketplace</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Legal Agreement</label><nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Legal Agreements Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Legal Agreements</pluralLabel><sharingModel>ReadWrite</sharingModel><validationRules>
        <fullName>CTT_Agreement_Needs_AppId</fullName>
        <active>true</active>
        <description>If Legal Agreement Key = ctt, appid is required</description>
        <errorConditionFormula>AND(key__c = 'ctt', ISBLANK(appId__c))</errorConditionFormula>
        <errorDisplayField>appId__c</errorDisplayField>
        <errorMessage>AppId is required for ctt agreements. Please provide appId</errorMessage>
    </validationRules></CustomObject>